  * [doc] update ssl.cipher-list recommendation
  * [stat-cache] FAM: fix use after free (CVE-2013-4560)
  * [stat-cache] fix FAM cleanup/fdevent handling
  * [core] check success of setuid,setgid,setgroups (CVE-2013-4559)
  * [ssl] fix regression from CVE-2013-4508 (client-cert sessions were broken)

- 1.4.33 - 2013-09-27
  * mod_fastcgi: fix mix up of "mode" => "authorizer" in other fastcgi configs (fixes #2465, thx peex)
  * fix handling of If-Modified-Since if If-None-Match is present (don't return 412 for date parsing errors);
    follow current draft for HTTP/1.1, which tells us to ignore If-Modified-Since if we have matching etags.
  * [mod_fastcgi,log] support multi line logging (fixes #2252)
  * call ERR_clear_error only for ssl connections in CON_STATE_ERROR
  * reject non ASCII characters in HTTP header names
  * [mod_auth] use crypt() on encrypted password instead of extracting salt first (fixes #2483)
  * [mod_auth] add htpasswd -s (SHA1) support if openssl is used (needs openssl for SHA1). This doesn't use any salt, md5 with salt is probably better.
  * [mod_auth] fix base64_decode (#2484)
  * fix some bugs found with canalyze (fixes #2484, thx Zhenbo Xu)
  * fix undefined stuff found with clang
  * [cmake] Use TARGET_LINK_LIBRARIES instead of LINK_FLAGS for library dependencies, also add -Wl,--as-needed to extra warnings (fixes #2448)
  * [mod_auth] fix invalid read in digest qop=auth-int handling (fixes #2478)
  * [auto* build] simplify autogen.sh, handle automake 1.13 test running (fixes #2490)
  * [mod_userdir] add userdir.active option, "enabled" by default
  * [core] return 501 Not Implemented in static file mode for all methods except GET/POST/HEAD/OPTIONS
  * [core] recognize more http methods to forward to backends (fixes #2346)
  * [ssl] use DH only if openssl supports it (fixes #2479)
  * [network] use constants available at compile time for maximum number of chunks for writev instead of calling sysconf (fixes #2470)